--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="Calculator" Height="800" Width="400">
     <Grid>
         <Grid.Resources>
-            <Style TargetType="Button">
+            <Style TargetType="ContentControl">
                 <Setter Property="Background" Value="Blue"/>
                 <Setter Property="Height" Value="80"/>
                 <Setter Property="Width" Value="80"/>
@@ -26,6 +26,10 @@
                     </Style>
                 </Style.Resources>
             </Style>
+            <Style TargetType="Button" 
+                   BasedOn="{StaticResource {x:Type ContentControl}}"/>
+            <Style TargetType="RepeatButton"
+                   BasedOn="{StaticResource {x:Type ContentControl}}"/> 
         </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -46,24 +50,68 @@
                 Grid.Row="0" BorderThickness="1" 
                 BorderBrush="Blue" CornerRadius="5"
                 Margin="5">
-            <TextBlock TextAlignment="Right" FontSize="36" VerticalAlignment="Center" Margin="5" FontFamily="Consolas" Text="{Binding DisplayValue}"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock TextAlignment="Left" 
+                           FontSize="36" 
+                           VerticalAlignment="Center" 
+                           Margin="5" 
+                           FontFamily="Consolas" 
+                           Text="{Binding EquationValue}"/>
+                <TextBlock Grid.Row="1" 
+                           TextAlignment="Right" 
+                           FontWeight="Bold" 
+                           Text="{Binding ResultValue}"
+                           Margin="5"
+                           FontSize="36"/>
+            </Grid>
         </Border>
         <Button Grid.Column="0" Grid.Row="5" 
-                Grid.ColumnSpan="2" Width="170" Content="0" Command="{Binding TypeNumber}" CommandParameter="0"/>
-        <Button Grid.Column="3" Grid.Row="5" Content="=" Command="{Binding TypeEquals}"/>
-        <Button Grid.Column="0" Grid.Row="4" Content="1" Command="{Binding TypeNumber}" CommandParameter="1"/>
-        <Button Grid.Column="1" Grid.Row="4" Content="2" Command="{Binding TypeNumber}" CommandParameter="2"/>
-        <Button Grid.Column="2" Grid.Row="4" Content="3" Command="{Binding TypeNumber}" CommandParameter="3"/>
-        <Button Grid.Column="3" Grid.Row="4" Content="+" Command="{Binding TypeAdd}"/>
-        <Button Grid.Column="0" Grid.Row="3" Content="4" Command="{Binding TypeNumber}" CommandParameter="4"/>
-        <Button Grid.Column="1" Grid.Row="3" Content="5" Command="{Binding TypeNumber}" CommandParameter="5"/>
-        <Button Grid.Column="2" Grid.Row="3" Content="6" Command="{Binding TypeNumber}" CommandParameter="6"/>
-        <Button Grid.Column="3" Grid.Row="3" Content="-"/>
-        <Button Grid.Column="0" Grid.Row="2" Content="7" Command="{Binding TypeNumber}" CommandParameter="7"/>
-        <Button Grid.Column="1" Grid.Row="2" Content="8" Command="{Binding TypeNumber}" CommandParameter="8"/>
-        <Button Grid.Column="2" Grid.Row="2" Content="9" Command="{Binding TypeNumber}" CommandParameter="9"/>
-        <Button Grid.Column="3" Grid.Row="2" Content="X"/>
-        <Button Grid.Column="0" Grid.Row="1" Content="C" Command="{Binding TypeCancel}"/>
-        <Button Grid.Column="3" Grid.Row="1" Content="/"/>
+                Grid.ColumnSpan="2" Width="170" 
+                Content="0" Command="{Binding TypeNumber}" 
+                CommandParameter="0"/>
+        <Button Grid.Column="3" Grid.Row="5" Content="=" 
+                Command="{Binding TypeEquals}"/>
+        <Button Grid.Column="0" Grid.Row="4" Content="1" 
+                Command="{Binding TypeNumber}" CommandParameter="1"/>
+        <Button Grid.Column="1" Grid.Row="4" Content="2" 
+                Command="{Binding TypeNumber}" CommandParameter="2"/>
+        <Button Grid.Column="2" Grid.Row="4" Content="3" 
+                Command="{Binding TypeNumber}" CommandParameter="3"/>
+        <Button Grid.Column="3" Grid.Row="4" Content="+" 
+                Command="{Binding TypeOperation}" CommandParameter="+"/>
+        <Button Grid.Column="0" Grid.Row="3" Content="4" 
+                Command="{Binding TypeNumber}" CommandParameter="4"/>
+        <Button Grid.Column="1" Grid.Row="3" Content="5" 
+                Command="{Binding TypeNumber}" CommandParameter="5"/>
+        <Button Grid.Column="2" Grid.Row="3" Content="6" 
+                Command="{Binding TypeNumber}" CommandParameter="6"/>
+        <Button Grid.Column="3" Grid.Row="3" Content="-" 
+                Command="{Binding TypeOperation}" CommandParameter="-"/>
+        <Button Grid.Column="0" Grid.Row="2" Content="7" 
+                Command="{Binding TypeNumber}" CommandParameter="7"/>
+        <Button Grid.Column="1" Grid.Row="2" Content="8" 
+                Command="{Binding TypeNumber}" CommandParameter="8"/>
+        <Button Grid.Column="2" Grid.Row="2" Content="9" 
+                Command="{Binding TypeNumber}" CommandParameter="9"/>
+        <Button Grid.Column="3" Grid.Row="2" Content="X"
+                Command="{Binding TypeOperation}" 
+                CommandParameter="*"/>
+        <RepeatButton Interval="100" 
+                      Grid.Column="0" 
+                      Grid.Row="1" 
+                      Content="C" 
+                      Command="{Binding TypeCancel}"/>
+        <Button Grid.Column="3" Grid.Row="1" Content="/"
+                Command="{Binding TypeOperation}" CommandParameter="/"/>
+        <Button Grid.Column="1" Grid.Row="1" 
+                Command="{Binding TypeOperation}" 
+                CommandParameter="(" Content="("/>
+        <Button Grid.Column="2" Grid.Row="1" 
+                Command="{Binding TypeOperation}" 
+                CommandParameter=")" Content=")"/>
     </Grid>
 </Window>
